; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_os390.c_uv_get_total_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_os390.c_uv_get_total_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i8*, i32 }

@CVT_PTR = common dso_local global i64 0, align 8
@CVTRCEP_OFFSET = common dso_local global i64 0, align 8
@RCEPOOL_OFFSET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_get_total_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_2__, align 8
  %3 = alloca %struct.TYPE_2__, align 8
  %4 = bitcast %struct.TYPE_2__* %2 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %4, i8 0, i64 24, i1 false)
  %5 = bitcast %struct.TYPE_2__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %5, i8 0, i64 24, i1 false)
  %6 = load i64, i64* @CVT_PTR, align 8
  %7 = inttoptr i64 %6 to i8**
  %8 = load i8*, i8** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 1
  store i8* %8, i8** %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @CVTRCEP_OFFSET, align 8
  %13 = add nsw i64 %11, %12
  %14 = inttoptr i64 %13 to i8**
  %15 = load i8*, i8** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  store i8* %15, i8** %16, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @RCEPOOL_OFFSET, align 8
  %20 = add nsw i64 %18, %19
  %21 = inttoptr i64 %20 to i32*
  %22 = load i32, i32* %21, align 4
  %23 = mul nsw i32 %22, 4
  store i32 %23, i32* %1, align 4
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
